templates/Kekeke/src/styles/main.sass
@font-face 
	font-family: BloBlo
	src: url('https://files.jcink.net/uploads2/somethingelseishere/BLOODY_TTF.ttf')
@font-face 
	font-family: Sandora
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Sandora.ttf') 
@font-face 
	font-family: Roboto Light
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Light.ttf')
@font-face 
	font-family: Roboto Bold 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Bold.ttf') 
@font-face 
	font-family: Roboto Regular 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Regular.ttf') 
@font-face 
	font-family: Roboto Thin 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Thin.ttf') 
@font-face 
	font-family: Roboto Light 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Light.ttf') 
@font-face 
	font-family: Roboto C 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Condensed.ttf') 
@font-face 
	font-family: Roboto Mid 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Roboto_Medium.ttf') 
@font-face 
	font-family: Dolce Vita 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Dolce_Vita.ttf') 
@font-face 
	font-family: Dolce Vita Light 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Dolce_Vita_Light.ttf') 
@font-face 
	font-family: Kiona 
	src: url('https://files.jcink.net/uploads2/somethingelseishere/Kiona_Regular.ttf') 




.ketsuekiCont
	--color-accent: #d10303
	--base-color: #168AAD


	position: relative
	width: 50rem
	max-width: 100%
	border: 1px solid blue
	font-family: Roboto Light, sans-serif
	text-align: justify
	padding: 0.5rem


	.section
		display: grid
		justify-items: center

	img
		object-fit: scale-down
		max-width: 100%

	b
		color: var(--color-accent)

	a
		color: #FF4D4D

	p
		justify-self: start
		margin: 0.3rem 0

	h2, h3, h4, h5
		text-transform: uppercase
		font-family: Kiona, sans-serif
		color: var(--color-accent)

	h1
		text-transform: uppercase
		font: 4rem BloBlo, sans-serif

	h2
		font-size: 2rem
	
	h3
		font-size: 1.8rem

	h4
		font-size: 1.4rem

	h5
		font-size: 1.2rem

	.ToC
		display: flex
		flex-direction: column
		justify-content: space-between
		align-items: center
		list-style-type: none
		padding: 0
		margin: 0

		li
			flex-basis: 1 1 auto

	.listOf
		display: flex
		flex-direction: row
		flex-wrap: wrap
		gap: 0.5rem
		list-style: none

		li
			display: block
			padding: 0.7rem

			&:hover
				background-color: black

	.toLeft
		justify-self: start

	.toRight
		justify-self: end

	.kageCouncil
		justify-self: start
		list-style-type: none

		li:last-of-type
			margin-left: 3rem

	.rank
		color: var(--color-accent)

		&::after
			color: initial
			content: ' ;; '

